bk_ida/gccida/g1/rest_of_type_compilation
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rest_of_type_compilation/src/toplev.c:2792:15: error: use of undeclared identifier 'TV_SYMOUT_0'; did you mean 'TV_SYMOUT'?
timevar_push( TV_SYMOUT_0); 
              ^~~~~~~~~~~
              TV_SYMOUT
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rest_of_type_compilation/src/timevar.def:86:13: note: 'TV_SYMOUT' declared here
DEFTIMEVAR (TV_SYMOUT                , "symout")
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rest_of_type_compilation/src/toplev.c:2797:14: error: use of undeclared identifier 'TV_SYMOUT_0'; did you mean 'TV_SYMOUT'?
timevar_pop( TV_SYMOUT_0); 
             ^~~~~~~~~~~
             TV_SYMOUT
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rest_of_type_compilation/src/timevar.def:86:13: note: 'TV_SYMOUT' declared here
DEFTIMEVAR (TV_SYMOUT                , "symout")
            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rest_of_type_compilation/src/obj/toplev.o] Error 1
